Sig-store implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-<h1>NgRx</h1>
-<div style="display: flex; justify-content: space-around;">
-    
-<!-- <div style="padding: 10px; border: 1px solid blueviolet;"> <app-counter></app-counter> </div>
-<div style="padding: 10px;border: 1px solid #34197e"> <app-dashboard></app-dashboard></div> -->
+<h1> NgRx - Signals - Signals Store </h1>
 
-<div style="padding: 10px; border: 1px solid blueviolet;"> <app-student></app-student> </div>
-<div style="padding: 10px;border: 1px solid #34197e"> <app-staffs></app-staffs></div>
+<div class="row" style="padding: 10px;">
+    <button (click)="clearLocalStore()">Logout</button>
+</div>
+
+<div class="row" style="padding: 10px;">
+    <!-- NEW -->
+    <div class="Column">
+        <app-sigs-products></app-sigs-products>
+    </div>
+    <div class="Column">
+        <app-sigs-orders></app-sigs-orders>
+    </div>
+    <div class="Column">
+        <app-sigs-cart></app-sigs-cart>
+    </div>
 </div>
