--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,9 +2,27 @@ p {
   font-family: Lato;
 }
 
-h1 { font-family: Lato; }
+h1 {
+  font-family: Lato;
+}
 
 
+.Row {
+  display: table;
+  width: 100%;
+  /*Optional*/
+  table-layout: fixed;
+  /*Optional*/
+  border-spacing: 10px;
+  /*Optional*/
+}
+
+.Column {
+  display: table-cell;
+  /* background-color: red; Optional */
+  border: 1px solid #ccc;
+  padding: 5px;
+}
 
 /*
 Use of this source code is governed by an MIT-style license that
