--- a/src/app/modules/signals/components/sig-store/sigs-orders/sigs-orders.component.html
+++ b/src/app/modules/signals/components/sig-store/sigs-orders/sigs-orders.component.html
@@ -1,6 +1,6 @@
-<p>Order Details</p>
+<h5>Order Component</h5>
 
-<small>
-    Ordered Items: {{ cartStore.cartItems().length }}
-
-</small>
+<h5>
+    Items in cart: {{ cartStore.cartItems().length }}
+</h5>
+<small>(Fetched from Cart Store)</small>
