--- a/src/app/modules/signals/components/sig-store/sigs-products/sigs-products.component.css
+++ b/src/app/modules/signals/components/sig-store/sigs-products/sigs-products.component.css
@@ -1,7 +1,6 @@
 
 .product-list {
     height: 20rem;
-    width: 240px;
     overflow-y: scroll;
 }
 
@@ -10,3 +9,8 @@
     padding: 10px;
     border: 1px solid #ccc
 }
+
+button {
+    margin: 5px;
+  }
+  
