--- a/src/app/modules/signals/components/sig-store/sigs-products/sigs-products.component.html
+++ b/src/app/modules/signals/components/sig-store/sigs-products/sigs-products.component.html
@@ -1,16 +1,12 @@
-<h5>Products List</h5>
-
-<!-- <div class="cart-list">
-    <ul>
-        <li *ngFor="let item of productStore.cartList()">
-            {{ (item.name) }} x {{ item.price }}
-        </li>
-    </ul>
-    <div> Total $: {{ productStore.totalPrice() }}</div>
-</div> -->
+<h5>Products Component</h5>
 
 <div class="products">
     <small> Items displayed: {{ productStore.products().length }}</small>
+    <div>
+        <input type="text" [(ngModel)]="filterValue" />
+        <button (click)="onFilter()">Filter</button>
+        <button (click)="clear()"> Clear </button>
+    </div>
     <div class="product-list" infiniteScroll (scrolled)="onScroll()" [infiniteScrollDistance]="2"
         [infiniteScrollThrottle]="500" [infiniteScrollContainer]="'.product-list'" [fromRoot]="true">
         <div *ngFor="let product of productStore.products()" class="product-item">
